# pick4me

./: .gitignore  CLAUDE.md  Dockerfile  README.md  fly.toml  osun-grill.html  wrangler.toml
backend/: .env.example  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_restaurant_tagline_menu_url.py
backend/app/: database.py  main.py  models.py  quiz_config.py  recommender.py  seed.py  settings.py
backend/app/routers/: events.py  recommendations.py
backend/tests/: conftest.py  test_events.py  test_recommender.py
frontend/: osun-grill.html
frontend/menu_pictures/: BBQ Chicken.avif  Fried Rice.avif  Garlic Butter Chicken Wings.avif  Garlic Butter Shrimp.avif  Kalbi.avif  Pork Chop.avif  Salt & Pepper Shrimp.avif  Shrimp Tempura.avif  Steak.avif  Veggie Spring Rolls.avif
scripts/: compress_menu_images.py  make_qr.py
src/: worker.js
