[project]
name = "pick4me-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-env>=1.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
env = [
    "DATABASE_URL=postgresql+asyncpg://pick4me:pick4me@127.0.0.1:5432/pick4me_test",
    "DATABASE_SYNC_URL=postgresql+psycopg2://pick4me:pick4me@127.0.0.1:5432/pick4me_test",
]
